--- a/package.json
+++ b/package.json
@@ -31,8 +31,10 @@
     "eslint-plugin-react-hooks": "^7.0.1",
     "eslint-plugin-react-refresh": "^0.4.24",
     "globals": "^16.5.0",
+    "javascript-obfuscator": "^5.1.0",
     "pg": "^8.16.3",
     "postcss": "^8.5.6",
+    "rollup-plugin-obfuscator": "^1.1.0",
     "tailwindcss": "^3.4.17",
     "vite": "^7.2.4",
     "vite-plugin-pwa": "^1.2.0"
