--- a/package.json
+++ b/package.json
@@ -40,5 +40,10 @@
     "tailwindcss": "^3.4.17",
     "vite": "^7.2.4",
     "vite-plugin-pwa": "^1.2.0"
+  },
+  "overrides": {
+    "react-helmet-async": {
+      "react": "$react"
+    }
   }
 }
