--- a/package.json
+++ b/package.json
@@ -42,8 +42,7 @@
     "vite-plugin-pwa": "^1.2.0"
   },
   "overrides": {
-    "react-helmet-async": {
-      "react": "$react"
-    }
+    "react": "^19.2.0",
+    "react-dom": "^19.2.0"
   }
 }
