--- a/diverai-twa/app/src/main/AndroidManifest.xml
+++ b/diverai-twa/app/src/main/AndroidManifest.xml
@@ -175,6 +175,17 @@
             
         </activity>
 
+        <receiver android:name=".MarketTickerWidget"
+            android:exported="true">
+            <intent-filter>
+                <action android:name="android.appwidget.action.APPWIDGET_UPDATE" />
+            </intent-filter>
+
+            <meta-data
+                android:name="android.appwidget.provider"
+                android:resource="@xml/widget_market_ticker_info" />
+        </receiver>
+
         <activity android:name="com.google.androidbrowserhelper.trusted.FocusActivity" />
 
         <activity android:name="com.google.androidbrowserhelper.trusted.WebViewFallbackActivity"
