--- a/dist-extension/manifest.json
+++ b/dist-extension/manifest.json
@@ -1,14 +1,16 @@
 {
     "manifest_version": 3,
     "name": "Diver AI Companion",
-    "version": "1.3",
+    "version": "1.3.6",
     "description": "Real-time chart analysis overlay for TradingView.",
     "permissions": [
         "sidePanel",
         "activeTab",
-        "storage"
+        "storage",
+        "unlimitedStorage"
     ],
     "host_permissions": [
+        "<all_urls>",
         "https://www.tradingview.com/*",
         "https://finance.yahoo.com/*",
         "https://*.coingecko.com/*",
@@ -46,7 +48,7 @@
         "default_path": "sidepanel.html"
     },
     "content_security_policy": {
-        "extension_pages": "script-src 'self' 'wasm-unsafe-eval'; object-src 'self'; worker-src 'self'; connect-src 'self' https://brrjoheinakfhohesogc.supabase.co wss://brrjoheinakfhohesogc.supabase.co https://api.ipify.org https://api.coingecko.com https://query1.finance.yahoo.com https://finnhub.io"
+        "extension_pages": "script-src 'self' 'wasm-unsafe-eval'; object-src 'self'; worker-src 'self'; connect-src 'self' https: wss: http:"
     },
     "web_accessible_resources": [
         {
