--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "@supabase/supabase-js": "^2.89.0",
     "@tensorflow/tfjs": "^4.22.0",
+    "@thumbmarkjs/thumbmarkjs": "^1.6.1",
     "@vercel/analytics": "^1.6.1",
     "framer-motion": "^12.23.26",
     "jsonwebtoken": "^9.0.3",
